fixes before publish

--- a/articles/er-metrics-library/er-additional-references.bib
+++ b/articles/er-metrics-library/er-additional-references.bib
@@ -16,6 +16,7 @@
 }
 @inproceedings{Qia17,
 author = {Qian, Kun and Popa, Lucian and Prithviraj, Sen },
+booktitle = {Active learning for large-scale entity resolution},
 title = {Active learning for large-scale entity resolution},
 year = {2017},
 pages = {1379-1388}
@@ -54,6 +55,7 @@ pages = {157-169}
 @inproceedings{Goga2015,
 author = {Goga, Oana and Loiseau, Patrick and Sommer, Robin and Teixeira, Renata and Gummandi, Krishna P.},
 address = {Sydney},
+booktitle = {On the Reliability of Profile Matching Across Large Online Social Networks},
 title = {On the Reliability of Profile Matching Across Large Online Social Networks},
 year = {2015}
 }
@@ -67,6 +69,7 @@ pages = {192435-192456}
 }
 @inproceedings{Men10,
 author = {Menestrina, David and Whang, Steven Euijong and Garcia-Molina, H. },
+booktitle = {Evaluating entity resolution results},
 title = {Evaluating entity resolution results},
 year = {2010}
 }
@@ -142,7 +145,7 @@ abstract = {This paper proposes an information theoretic criterion for comparing
 @book{jain1991profiling,
    title =     {The Art of Computer Systems Performance Analysis: Techniques for Experimental Design, Measurement, Simulation, and Modeling},
    author =    {Raj K. Jain},
-   publisher = {},
+   publisher = {Wiley New York},
    isbn =      {0471503363, 9780471503361},
    year =      {1991},
    series =    {},
