--- a/articles/er-metrics-library/er-software.bib
+++ b/articles/er-metrics-library/er-software.bib
@@ -27,7 +27,7 @@
   note={Online; Accessed: 18.11.2023},
 }
 
-@software{pyproto2017,
+@misc{pyproto2017,
   title={PEP-544 - Protocols: Structural subtyping (static duck typing)},
   author={Ivan Levkivskyi, Jukka Lehtosalo, Lukasz Langa},
   year={2017},
@@ -35,15 +35,18 @@
   note={Online; Accessed: 26.11.2023},
 }
 
-@software{matchescu-er-metrics2023,
+@misc{matchescu-er-metrics2023,
  title={PyResolveMetrics},
  author={PyResolveMetrics},
  year={2023},
  howpublished="\url{https://github.com/matchescu/er-metrics}",
  note={Online; Accessed: 26.11.2023},
 }
+
 @conference {flamegraphs2013,
 title = {Blazing Performance with Flame Graphs},
+booktitle = {Blazing Performance with Flame Graphs},
+author = {Brendan Gregg},
 year = {2013},
 address = {Washington, D.C.},
 publisher = {USENIX Association},
