--- a/articles/er-metrics-library/er-related-work.bib
+++ b/articles/er-metrics-library/er-related-work.bib
@@ -63,7 +63,8 @@ pages = {1183-1210}
   title={String comparator metrics and enhanced decision rules in the Fellegi-Sunter model of record linkage.},
   author={Winkler, William E},
   year={1990},
-  publisher={ERIC}
+  publisher={ERIC},
+  journal={Non-Journal}
 }
 
 @book{Tal11,
