--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -37,10 +37,11 @@
     \keywords{Entity Resolution,Metrics,Library,Open Source,Standards-Compliant,Theoretical Model,Efficiency}
 
     \abstract{Entity resolution, the process of discerning whether multiple data
-    refer to the same real-world entity, is crucial across various domains.
+    refer to the same real-world entity, is crucial across various domains,
+    including education.
     Its quality assessment is increasingly vital due to the extensive practical
-    applications in fields such as natural language processing, information
-    retrieval, and machine learning.
+    applications in fields such as analytics, personalized learning or academic
+    integrity.
     With Python emerging as the predominant programming language in these areas,
     this paper attempts to fill in a gap when evaluating the qualitative
     performance of entity resolution tasks by proposing a novel consistent
