reorganize article and integrate review comments

--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -91,3 +91,12 @@
   year={1960},
   publisher={van Nostrand}
 }
+
+@article{schodinger1926,
+  title={Quantisierung als Eigenwertproblem.(Erste Mitteilung)},
+  author={Sch{\"o}dinger, E},
+  journal={Annalen der Physik},
+  volume={79},
+  pages={361--376},
+  year={1926}
+}
