drastically improve the quality and coherence of the article

--- a/articles/er-evaluation-models/er-additional-references.bib
+++ b/articles/er-evaluation-models/er-additional-references.bib
@@ -2,7 +2,6 @@
   title={Pattern recognition and machine learning},
   author={Bishop, Christopher M and Nasrabadi, Nasser M},
   volume={4},
-  number={4},
   year={2006},
   publisher={Springer}
 }
@@ -17,6 +16,7 @@
 @inproceedings{Qia17,
 author = {Qian, Kun and Popa, Lucian and Prithviraj, Sen },
 title = {Active learning for large-scale entity resolution},
+booktitle={CIKM '17: Proceedings of the 2017 ACM on Conference on Information and Knowledge Management},
 year = {2017},
 pages = {1379-1388}
 }
@@ -41,6 +41,7 @@ year = {2019}
 @article{Li2020,
 author = {Li, Bing and Wang, Wei and Sun, Yifang and Zhang, Linhan and Ali, Muhammad Asif and Wang, Yi },
 title = {GraphER: Token-Centric Entity Resolution with Graph Convolutional Neural Networks},
+journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
 year = {2020}
 }
 @article{Kon19,
@@ -52,10 +53,11 @@ volume = {13},
 pages = {157-169}
 }
 @inproceedings{Goga2015,
-author = {Goga, Oana and Loiseau, Patrick and Sommer, Robin and Teixeira, Renata and Gummandi, Krishna P.},
-address = {Sydney},
-title = {On the Reliability of Profile Matching Across Large Online Social Networks},
-year = {2015}
+  title={On the reliability of profile matching across large online social networks},
+  author={Goga, Oana and Loiseau, Patrick and Sommer, Robin and Teixeira, Renata and Gummadi, Krishna P},
+  booktitle={Proceedings of the 21th ACM SIGKDD international conference on knowledge discovery and data mining},
+  pages={1799--1808},
+  year={2015}
 }
 @article{Che20,
 author = {Chen, Zhe and Wang, Yuehan and Zhao, Bin and Cheng, Jing and Zhao, Xin and Duan, Zongtao },
@@ -65,10 +67,15 @@ year = {2020},
 volume = {8},
 pages = {192435-192456}
 }
-@inproceedings{Men10,
-author = {Menestrina, David and Whang, Steven Euijong and Garcia-Molina, H. },
-title = {Evaluating entity resolution results},
-year = {2010}
+@article{Men10,
+  title={Evaluating entity resolution results},
+  author={Menestrina, David and Whang, Steven Euijong and Garcia-Molina, Hector},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={208--219},
+  year={2010},
+  publisher={VLDB Endowment}
 }
 @article{Weis2006,
 author = {Weis, Melanie and Naumann, Felix and Brosy, Franziska },
@@ -122,4 +129,19 @@ year = {2019}
   pages={1--41},
   year={2011},
   publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{alhelbawy2014,
+    title = "Collective Named Entity Disambiguation using Graph Ranking and Clique Partitioning Approaches",
+    author = "Alhelbawy, Ayman  and
+      Gaizauskas, Robert",
+    editor = "Tsujii, Junichi  and
+      Hajic, Jan",
+    booktitle = "Proceedings of {COLING} 2014, the 25th International Conference on Computational Linguistics: Technical Papers",
+    month = "Aug",
+    year = "2014",
+    address = "Dublin, Ireland",
+    publisher = "Dublin City University and Association for Computational Linguistics",
+    url = "https://aclanthology.org/C14-1147",
+    pages = "1544--1555",
 }
