--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -82,6 +82,7 @@
 @book{hoffman1971linear,
   title={Linear algebra},
   author={Hoffman, Kenneth},
+  publisher={Prentice-Hall, Inc},
   year={1971}
 }
 
@@ -92,7 +93,7 @@
   publisher={van Nostrand}
 }
 
-@article{schodinger1926,
+@article{schrodinger1926,
   title={Quantisierung als Eigenwertproblem.(Erste Mitteilung)},
   author={Sch{\"o}dinger, E},
   journal={Annalen der Physik},
