--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -17,11 +17,11 @@ volume = {64},
 pages = {1183-1210}
 }
 
-@article{winkler1990,
+@techreport{winkler1990,
   title={String comparator metrics and enhanced decision rules in the Fellegi-Sunter model of record linkage.},
   author={Winkler, William E},
   year={1990},
-  publisher={ERIC}
+  institution={ERIC}
 }
 
 @book{Tal11,
