--- a/articles/er-evaluation-models/experiments.tex
+++ b/articles/er-evaluation-models/experiments.tex
@@ -12,7 +12,7 @@ We use the Python~\cite{python} programming language (version 3.11) and the
 Numpy~\cite{numpy} and Pandas~\cite{pandas2023} libraries for efficient
 data manipulation.
 All metrics are computed using an OpenSource library available on GitHub as
-well~\cite{er-metrics}.
+well~\cite{matchescu-er-metrics2023}.
 
 \subsection{Datasets}\label{subsec:data}
 
