--- a/articles/er-evaluation-models/er-software.bib
+++ b/articles/er-evaluation-models/er-software.bib
@@ -1,4 +1,4 @@
-@software{pandas2023,
+@misc{pandas2023,
     author       = {The pandas development team},
     title        = {pandas-dev/pandas: Pandas (v2.1.1)},
     month        = feb,
@@ -7,4 +7,35 @@
     version      = {latest},
     doi          = {10.5281/zenodo.3509134},
     url          = {https://doi.org/10.5281/zenodo.3509134}
+}
+
+@misc{matchescu-er-metrics2023,
+ title={PyResolveMetrics},
+ author={PyResolveMetrics},
+ year={2023},
+ howpublished="\url{https://github.com/matchescu/er-metrics}",
+ note={Online; Accessed: 26.11.2023},
+}
+
+@article{numpy,
+ title         = {Array programming with {NumPy}},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+                 van der Walt and Ralf Gommers and Pauli Virtanen and David
+                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                 Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+                 R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                 G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                 Travis E. Oliphant},
+ year          = {2020},
+ month         = sep,
+ journal       = {Nature},
+ volume        = {585},
+ number        = {7825},
+ pages         = {357--362},
+ doi           = {10.1038/s41586-020-2649-2},
+ publisher     = {Springer Science and Business Media {LLC}},
+ url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
